--- a/search.html
+++ b/search.html
@@ -167,12 +167,12 @@
                     <li>
                         <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i> Contacts <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="demo" class="collapse">
-                            <li>
-                                <a href="#">Friends</a>
-                            </li>
-                            <li>
-                                <a href="#">Neighbours</a>
-                            </li>
+                          <li>
+                              <a href="/Padosi/friends.html">Friends</a>
+                          </li>
+                          <li>
+                              <a href="/Padosi/neighbours.html">Neighbours</a>
+                          </li>
                         </ul>
                     </li>
                 </ul>
